# habitica-party-chat

./: .config.example.yaml  .envrc  .gitignore  CHANGELOG.md  default.nix  habitica-party-chat.cabal  shell.nix  sources.nix  spago.dhall
client/: index.html
scripts/: runapp
server/: Main.hs
