cabal-version:       >=1.10

name:                habitica-party-chat
version:             0.1.0.0
synopsis:            Backend for real-time Habitica party chat.
license:             GPL-3
license-file:        LICENSE
author:              Rob Whitaker
maintainer:          dev@robwhitaker.com
copyright:           (c) 2020 Rob Whitaker
category:            Chat
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable habitica-party-chat
  main-is:             Main.hs
  ghc-options:         -Wall
                       -Werror
                       -fwarn-incomplete-uni-patterns
                       -fwarn-tabs
                       -fwarn-incomplete-record-updates
                       -fno-warn-missing-signatures
                       -fno-warn-type-defaults
                       -Wwarn=deprecations
                       -Wwarn=unused-imports
                       -Wwarn=unused-local-binds
                       -Wwarn=unused-matches
                       -Wwarn=unused-do-bind
                       -Wwarn=unused-top-binds
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude
                     , ScopedTypeVariables
  build-depends:       aeson                             >= 1.4.6 && < 1.5
                     , base                              >= 4.13.0 && < 4.14
                     , containers                        >= 0.6.2 && < 0.7
                     , http-types                        >= 0.12.3 && < 0.13
                     , protolude                         >= 0.2.4 && < 0.3
                     , req                               >= 3.1.0 && < 3.2
                     , scotty                            >= 0.11.5 && < 0.12
                     , text                              >= 1.2.4 && < 1.3
                     , uuid                              >= 1.3.13 && < 1.4
                     , wai                               >= 3.2.2 && < 3.3
                     , wai-websockets                    >= 3.0.1 && < 3.1
                     , warp                              >= 3.3.9 && < 3.4
                     , websockets                        >= 0.12.7 && < 0.13
                     , yaml                              >= 0.11.2 && < 0.12
  hs-source-dirs:      server
  default-language:    Haskell2010
